--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   provider: ^6.0.5
   lottie: ^2.3.2
+  audioplayers: ^4.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
