Background Music Applied

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   provider: ^6.0.5
   lottie: ^2.3.2
   just_audio: ^0.9.33
+  just_audio_background: ^0.0.1-beta.10
   on_audio_query: ^2.9.0
   permission_handler: ^10.2.0
 
@@ -66,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/lottie/
+    - assets/img/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
